Update to Java 11: Using Spring Boot Version 2.1.5 now. Unfortunatly currently still not running. See readme.md.