@@ -6,22 +6,20 @@
 	<groupId>de.accso.jigsaw.example_spring-hibernate</groupId>
 	<artifactId>mod.app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
+	<description>example project for Spring Boot with java 11 / Jigsaw</description>
 	<packaging>jar</packaging>
-
-	<name>example_spring-hibernate, mod.app</name>
-	<description>Example Java9/Jigsaw project for Spring Boot, module mod.app</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.0.0.M5</version>
+		<version>2.1.5.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>9</java.version>
+		<java.version>11</java.version>
 	</properties>
 
 	<dependencies>
@@ -29,19 +27,14 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!-- DOES NOT WORK AT THE MOMENT, HENCE COMMENTED OUT dependency> 
-		    <groupId>org.springframework.boot</groupId>
-		    <artifactId>spring-boot-starter-jersey</artifactId> 
-		</dependency -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jersey</artifactId>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
-		</dependency>
-
 		<dependency>
 			<groupId>com.h2database</groupId>
 			<artifactId>h2</artifactId>
@@ -57,14 +50,6 @@
 			<artifactId>spring-security-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
-        <!-- Using slightly newer version of javassist due to java 9 probkem of older version.
-             See https://github.com/jboss-javassist/javassist/issues/147-->
-		<dependency>
-			<groupId>org.javassist</groupId>
-			<artifactId>javassist</artifactId>
-			<version>3.22.0-GA</version>
-		</dependency>
 	</dependencies>
 
 	<build>
@@ -72,61 +57,11 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<jvmArguments>--add-modules java.xml.bind</jvmArguments>
-				</configuration>
 			</plugin>
-
-			<plugin>
-				<artifactId>maven-surefire-plugin</artifactId>
-				<configuration>
-				    <!--  needed for Java 9  -->
-					<argLine>--add-modules java.xml.bind</argLine>
-				</configuration>
-			</plugin>
-			<plugin>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.7.0</version>
-				<dependencies>
-				    <!-- enforce that org.ow2.asm.asm 6.0 is used instead of 6.0_BETA -->
-					<dependency>
-						<groupId>org.codehaus.plexus</groupId>
-						<artifactId>plexus-java</artifactId>
-						<version>0.9.2</version>
-						<exclusions>
-							<exclusion>
-								<groupId>org.ow2.asm</groupId>
-								<artifactId>asm</artifactId>
-							</exclusion>
-						</exclusions>
-					</dependency>
-
-					<dependency>
-						<groupId>org.ow2.asm</groupId>
-						<artifactId>asm</artifactId>
-						<version>6.0</version>
-					</dependency>
-				</dependencies>
-			</plugin>
-			
-			<!-- Explicit declaration of main class is needed as a work around because asm version is not
-			     detected correctly otherwise, causing a runtime exception.
-			     See https://github.com/spring-projects/spring-boot/issues/10647 
-			 -->
-			<plugin>
-                 <groupId>org.springframework.boot</groupId>
-                 <artifactId>spring-boot-maven-plugin</artifactId>
-                 <configuration>
-              	   <!-- our own main class -->
-                   <mainClass>de.accso.jigsaw.example_springhibernate.ExampleSpringHibernateApplication</mainClass>
-                   <!-- CLI args needed for java 9 -->
-                   <arguments>--add-modules java.xml.bind</arguments>
-	             </configuration>
-             </plugin>
 		</plugins>
 	</build>
-
-	<repositories>
+	
+		<repositories>
 		<repository>
 			<id>spring-snapshots</id>
 			<name>Spring Snapshots</name>
@@ -163,6 +98,5 @@
 			</snapshots>
 		</pluginRepository>
 	</pluginRepositories>
-
 
 </project>
